# hack-02-2024-retailer-setup

./: Justfile  README.md  pyproject.toml
backend/: app.py  views.py
pub/: index.html  new-accumulator.html  style.css
